# tinyvk

./: .gitmodules  CMakeLists.txt  README.md  imgui.ini  vulkan_test.cpp
.github/instructions/: code_base.instructions.md
docs/: APPLICATION_MODES.md  ARCHITECTURE.md  CHECKLIST.md  FONTS.md  implementation_summary.md  render_widget.md
examples/: game_example.cpp  gui_example.cpp  hybrid_example.cpp
include/tinyvk/: tinyvk.h
include/tinyvk/assets/: fonts.h  icons_font_awesome.h
include/tinyvk/core/: application.h  file_dialog.h  input.h  log.h  timer.h  types.h  window.h
include/tinyvk/renderer/: buffer.h  context.h  mesh.h  pipeline.h  renderer.h  shader_compiler.h  shaders.h  texture.h  vertex.h
include/tinyvk/ui/: imgui_layer.h  render_widget.h  widgets.h
sandbox/: main.cpp
src/core/: application.cpp  file_dialog.cpp  input.cpp  window.cpp
src/renderer/: buffer.cpp  context.cpp  mesh.cpp  pipeline.cpp  renderer.cpp  shader_compiler.cpp  texture.cpp
src/ui/: imgui_layer.cpp  render_widget.cpp
